force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/FEC_MDM_Nature_Of_Case__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu chứa bộ Nature of Case</description>
    <label>Nature of Case MDM</label>
    <nameField>
        <label>Nature of Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nature of Case MDM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>