force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Nature of Case record is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>