force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Business_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process Name</label>
    <referenceTo>FEC_MDM_Business_Process__c</referenceTo>
    <relationshipLabel>Nature of Case MDM</relationshipLabel>
    <relationshipName>FEC_MDM_Nature_Of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>