force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Type__c</fullName>
    <label>FEC Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Non-existing</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>