force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Do_Not_Bother__c.field-meta.xml
<CustomField>
    <fullName>FEC_Do_Not_Bother__c</fullName>
    <description>Quy trình DNB được áp dụng</description>
    <label>Do Not Bother</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Inherited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>