force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>FEC_MDM_Product_Type__c</referenceTo>
    <relationshipLabel>Nature of Case MDM</relationshipLabel>
    <relationshipName>FEC_NatureOfCasePT</relationshipName>
    <type>Lookup</type>
</CustomField>