force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Product_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cloned from FEC_Nature_of_Case__c.FEC_Product_Type_Status__c (master: FEC_Product_Type__r.FEC_Active__c). MDM stores as plain Checkbox since no Lookup available.</description>
    <label>Product Type Status</label>
    <type>Checkbox</type>
</CustomField>