force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Remove_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Remove_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quy trình Remove Phone được áp dụng</description>
    <label>Remove Phone</label>
    <type>Checkbox</type>
</CustomField>