force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Role_Names__c.field-meta.xml
<CustomField>
    <fullName>FEC_Role_Names__c</fullName>
    <label>Role Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>