force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Stage_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage Name</label>
    <referenceTo>FEC_MDM_Case_Stage__c</referenceTo>
    <relationshipLabel>Nature of Case MDM</relationshipLabel>
    <relationshipName>FEC_MDM_Nature_Of_Case</relationshipName>
    <type>Lookup</type>
</CustomField>