force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Category</label>
    <referenceTo>FEC_MDM_Sub_Category__c</referenceTo>
    <relationshipLabel>Nature of Case MDM</relationshipLabel>
    <relationshipName>FEC_NatureOfCaseSubCategory</relationshipName>
    <type>Lookup</type>
</CustomField>