force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Sub_Category_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sub_Category_Status__c</fullName>
    <description>Cloned from FEC_Nature_of_Case__c.FEC_Sub_Category_Status__c (master: FEC_Sub_Category__r.FEC_Active__c). MDM stores as plain Checkbox since no Lookup available.</description>
    <defaultValue>false</defaultValue>
    <label>Sub Category Status</label>
    <type>Checkbox</type>
</CustomField>