force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_Transfer_Call_to_Collection__c.field-meta.xml
<CustomField>
    <fullName>FEC_Transfer_Call_to_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quy trình Transfer Call to Collection được áp dụng (aligned with Live FEC_Nature_of_Case__c)</description>
    <label>Transfer Call to Collection</label>
    <type>Checkbox</type>
</CustomField>