force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/fields/FEC_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Group__c</fullName>
    <description>User Group associated with this Nature of Case record</description>
    <label>User Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>