force-app/main/default/objects/FEC_MDM_Nature_Of_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FEC_Business_Process_Name__c</columns>
    <columns>FEC_Category_Name__c</columns>
    <columns>Process_Change_Status__c</columns>
    <columns>FEC_Product_Type_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>FEC_Stage_Name__c</columns>
    <columns>FEC_Sub_Category_Name__c</columns>
    <columns>FEC_Sub_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>